# RLM-Agent

./: .env.example  .gitignore  LICENSE  README.md  install.sh  mcp-config-example.json  pyproject.toml
docs/: PROJECT_OVERVIEW.md
docs/plans/: 2026-03-04-package-installer-design.md  2026-03-04-package-installer-implementation.md  2026-03-04-scholar-memory-mcp-design.md  2026-03-04-scholar-memory-mcp-implementation.md  2026-03-05-token-counter-rate-limiter-design.md  2026-03-05-token-counter-rate-limiter.md  2026-03-07-gaps-and-optimizations.md
examples/: basic_query.py  deep_review.py
scholaragent/: __init__.py  installer.py  mcp_server.py
scholaragent/agents/: analyst.py  critic.py  reader.py  scout.py  synthesizer.py
scholaragent/clients/: __init__.py  anthropic_client.py  base.py  openai_client.py  rate_limiter.py  router.py  token_counter.py
scholaragent/core/: agent.py  comms.py  dispatcher.py  handler.py  registry.py  types.py
scholaragent/environments/: __init__.py  base.py  local_repl.py
scholaragent/memory/: embeddings.py  research.py  store.py  types.py
scholaragent/sources/: docs.py  github.py
scholaragent/tools/: arxiv.py  pdf_extractor.py  semantic_scholar.py
scholaragent/utils/: budget.py  cache.py  cost.py  parsing.py  prompts.py  retry.py
tests/: conftest.py  helpers.py  test_agent.py  test_agent_integration.py  test_budget.py  test_clients.py  test_cost_tracking.py  test_deduplication.py  test_depth_levels.py  test_dispatcher.py  test_embeddings.py  test_focus_modes.py  test_handler.py  test_installer.py  test_integration.py  test_llm_cache.py  test_local_repl.py  test_logging.py  test_mcp_server.py  test_memory_types.py  test_parsing.py  test_pdf_extraction.py  test_public_api.py  test_rate_limiter.py  test_research_pipeline.py  test_retry.py  test_sources.py  test_specialists.py  test_store.py  test_token_counter.py  test_tools.py  test_types.py
