[project]
name = "scholaragent"
version = "0.2.0"
description = "Multi-agent scientific literature research system with persistent memory"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "mcp[cli]>=1.0",
    "numpy>=1.26",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
extraction = [
    "trafilatura>=1.8.0",
]

[project.scripts]
scholaragent-server = "scholaragent.mcp_server:main"
scholaragent-install = "scholaragent.installer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
