[project]
name = "scholaragent"
version = "0.2.0"
description = "Multi-agent scientific literature research system with persistent memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Basilios P.", email = "100252546+byBasiliosP@users.noreply.github.com" },
]
keywords = [
    "research",
    "multi-agent",
    "mcp",
    "arxiv",
    "semantic-scholar",
    "literature-review",
    "rlhf",
    "llm",
    "ai-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "mcp[cli]>=1.0",
    "numpy>=1.26",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
extraction = [
    "trafilatura>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/byBasiliosP/RLM-Agent"
Repository = "https://github.com/byBasiliosP/RLM-Agent"
Issues = "https://github.com/byBasiliosP/RLM-Agent/issues"

[project.scripts]
scholaragent-server = "scholaragent.mcp_server:main"
scholaragent-install = "scholaragent.installer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
